@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.81 2003/01/20 15:30:20 ukai Exp $ */
+/* $Id: proto.h,v 1.82 2003/01/20 15:54:11 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -375,8 +375,10 @@ extern void form_write_from_file(FILE * f, char *boundary, char *name,
 				 char *filename, char *file);
 extern MapList *searchMapList(Buffer *buf, char *name);
 extern void follow_map(struct parsed_tagarg *arg);
+#if defined(MENU_MAP) || defined(USE_IMAGE)
 extern MapArea *follow_map_menu(Buffer *buf, char *name, Anchor *a_img, int x,
 				int y);
+#endif
 #ifndef MENU_MAP
 extern Buffer *follow_map_panel(Buffer *buf, char *name);
 #endif
